added machine learning part

--- a/09_Machine Learning/code-examples/src/model_selection/cross_validation.ipynb
+++ b/09_Machine Learning/code-examples/src/model_selection/cross_validation.ipynb
@@ -118,8 +118,8 @@
      "text": [
       "Train Set Size: (111, 2)\n",
       "Val Set Size: (48, 2)\n",
-      "MSE LinearRegression = 41406\n",
-      "MSE RandomForestRegressor = 57950\n"
+      "MSE LinearRegression = 42060\n",
+      "MSE DecisionTreeRegressor = 42859\n"
      ]
     }
    ],
@@ -186,7 +186,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Bemerkung: Wir verwenden hier alle Daten als Validation Set: 48\n",
       "MSE LinearRegression = 34521\n",
       "MSE RandomForestRegressor = 57660\n"
      ]
@@ -242,7 +241,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.11.6"
   }
  },
  "nbformat": 4,
