--- a/09_Machine Learning/day1/exercises/regression/linear_regression.ipynb
+++ b/09_Machine Learning/day1/exercises/regression/linear_regression.ipynb
@@ -239,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 39,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -254,6 +254,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Zielvariable:\n",
       "count     159.000000\n",
       "mean      398.326415\n",
       "std       357.978317\n",
@@ -264,6 +265,9 @@
       "max      1650.000000\n",
       "Name: Weight, dtype: float64\n",
       "<class 'pandas.core.series.Series'>\n",
+      "\n",
+      "\n",
+      "Features:\n",
       "          Length1     Length2     Length3      Height       Width\n",
       "count  159.000000  159.000000  159.000000  159.000000  159.000000\n",
       "mean    26.247170   28.415723   31.227044    8.970994    4.417486\n",
@@ -278,7 +282,9 @@
       "1   Bream     24.0     26.3     31.2  12.4800  4.3056\n",
       "2   Bream     23.9     26.5     31.1  12.3778  4.6961\n",
       "3   Bream     26.3     29.0     33.5  12.7300  4.4555\n",
-      "4   Bream     26.5     29.0     34.0  12.4440  5.1340\n"
+      "4   Bream     26.5     29.0     34.0  12.4440  5.1340\n",
+      "\n",
+      "\n"
      ]
     }
    ],
@@ -286,11 +292,15 @@
     "y = df['Weight']\n",
     "X = df.drop('Weight', axis=1)\n",
     "\n",
+    "print('Zielvariable:')\n",
     "print(y.describe())\n",
     "print(type(y))\n",
+    "print('\\n')\n",
     "\n",
+    "print('Features:')\n",
     "print(X.describe())\n",
-    "print(X.head())"
+    "print(X.head())\n",
+    "print('\\n')"
    ]
   },
   {
@@ -669,7 +679,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 41,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -690,15 +700,20 @@
       " 859.03942122 312.04102938 -20.82937435 519.62202359 353.76484461\n",
       " 429.0847655  357.84639396 -13.84591418 593.10170836 209.37708709\n",
       " 165.88381405 501.92744546 -20.4636864  417.05245237  88.40515462\n",
-      " 473.07348673  32.30154558  -2.83988658 213.98947379 205.21886123]\n",
-      "RMSE: \n",
-      " 274.20168458425127\n"
+      " 473.07348673  32.30154558  -2.83988658 213.98947379 205.21886123] \n",
+      "\n",
+      "RMSE (prediction): \n",
+      " 274.20168458425127\n",
+      "RMSE (train): \n",
+      " 251.0280556210202\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
+      "/opt/homebrew/lib/python3.11/site-packages/sklearn/metrics/_regression.py:483: FutureWarning: 'squared' is deprecated in version 1.4 and will be removed in 1.6. To calculate the root mean squared error, use the function'root_mean_squared_error'.\n",
+      "  warnings.warn(\n",
       "/opt/homebrew/lib/python3.11/site-packages/sklearn/metrics/_regression.py:483: FutureWarning: 'squared' is deprecated in version 1.4 and will be removed in 1.6. To calculate the root mean squared error, use the function'root_mean_squared_error'.\n",
       "  warnings.warn(\n"
      ]
@@ -713,11 +728,14 @@
     "\n",
     "X_val_heigth = X_val['Height'].to_frame()\n",
     "lr_predict = lr.predict(X_val_heigth)\n",
-    "print('predit', '\\n', lr_predict)\n",
+    "print('predit', '\\n', lr_predict, '\\n')\n",
     "\n",
     "# get RMSE\n",
     "rmse = mean_squared_error(y_val, lr_predict, squared=False)\n",
-    "print('RMSE:', '\\n', rmse)"
+    "print('RMSE (prediction):', '\\n', rmse)\n",
+    "\n",
+    "rmse_train = mean_squared_error(y_train, lr.predict(X_train_height), squared=False)\n",
+    "print('RMSE (train):', '\\n', rmse_train)"
    ]
   },
   {
@@ -1178,18 +1196,6 @@
    "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.11.6"
   }
  },
  "nbformat": 4,
